nginx/openui5.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ui5-deployment
  namespace: deploy
  labels:
    app: ui5
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ui5
    spec:
      containers:
        - image: 'nginx:latest'
          imagePullPolicy: Always
          name: nginx
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          ports:
            - protocol: TCP
              containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: nginx-share
            - mountPath: /etc/localtime
              name: time
            - mountPath: /etc/nginx/nginx.conf
              name: nginxconf
      volumes:
        - name: time
          hostPath:
            path: /etc/localtime
            type: ''
        - name: nginx-share
          hostPath:
            path: /mnt/ibas/openui5/
            type: ''
        - name: nginxconf
          hostPath:  
            path: /mnt/ibas/openui5/nginx.conf
            type: ''
      nodeSelector:
        group: ibas-platform
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ui5-svc
  namespace: deploy
spec:
  selector:
    app: ui5
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
